# wobl

./: .gitignore  CMakeLists.txt  README.md
docs/: Notes.md  Synthesizing Sound.md  Writing a Software Synthesizer.md
include/: Envelope.hpp  Filter.hpp  Oscillator.hpp  oscillators.h  oscillators.hpp  wav.h
include/drivers/: LinuxAlsa.hpp  LinuxEvdev.hpp  WindowsRawInput.hpp  WindowsWasapi.hpp
include/input/: Input.hpp  InputDevice.hpp  InputDriver.hpp  InputEvent.hpp  InputHandler.hpp
include/output/: OutputConverter.hpp  OutputDevice.hpp  OutputDriver.hpp  OutputFormat.hpp  OutputHandler.hpp
include/stream/: Stream.hpp  WASAPI.hpp
include/synthesis/: Envelope.hpp  Noise.hpp  Wav.hpp
src/: Envelope.cpp  Filter.cpp  Oscillator.cpp  main.c  main.cpp  oscillators.c  oscillators.cpp  wav.c  wav.cpp
src/drivers/: LinuxAlsa.cpp  LinuxEvdev.cpp  WindowsRawInput.cpp  WindowsWasapi.cpp
src/input/: InputHandler.cpp
src/output/: OutputConverter.cpp  OutputHandler.cpp  Wav.cpp
src/synthesis/: Envelope.cpp  Noise.cpp
tests/: InputTest.cpp  OutputTest.cpp  SynthTest.cpp  main.cpp
util/: plot.py
